--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies" : { 
+  "dependencies" : {
+    "johnny-five": "^0.10.x",
   },
   "repository": {
     "type": "git",
